# Automotive_Gateway-

./: .gitignore  CMakeLists.txt  README.md
config/: gateway.conf  vehicle.dbc
include/gateway/: types.hpp
scripts/: setup_vcan.sh
src/: main.cpp
src/bench/: benchmark.cpp  benchmark.hpp
src/can/: can_socket.cpp  can_socket.hpp  dbc_parser.cpp  dbc_parser.hpp  signal_decoder.cpp  signal_decoder.hpp
src/doip/: doip_message.cpp  doip_message.hpp  doip_server.cpp  doip_server.hpp  uds_handler.cpp  uds_handler.hpp
src/event/: event_loop.hpp
src/someip/: someip_message.cpp  someip_message.hpp  someip_publisher.cpp  someip_publisher.hpp  someip_sd.cpp  someip_sd.hpp  someip_sd_service.cpp  someip_sd_service.hpp
src/utils/: can_printer.hpp  config_loader.cpp  config_loader.hpp  stats_reporter.cpp  stats_reporter.hpp  watchdog.cpp  watchdog.hpp
tools/: can_simulator.cpp  doip_client.cpp  someip_sd_subscriber.cpp  someip_subscriber.cpp  stress_test.cpp
